[package]
name = "purse"
description = "Bag data structure implementation in Rust"
version = "0.1.4"
edition = "2021"
authors = ["rauljordan"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rauljordan/purse"
repository = "https://github.com/rauljordan/purse"
rust-version = "1.71.0"
keywords = ["bag", "multiset"]
categories = ["data structures"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "insertions"
harness = false
